# SBPuginsSDK

./: .gitignore  Readme.txt
Examples/TestPlugin/: CMakeLists.txt  TestImage.cpp  TestImage.h  TestPlugin.cpp  TestPlugin.h  TestPluginImage.cpp  TestPluginImage.h  TestShader.cpp  TestShader.h
Examples/TestPlugin/Ext/: CMakeLists.txt
Examples/TestPlugin/Ext/SBPluginSDK/: SBNode.h
Examples/TestPlugin/Ext/SDL2/: CMakeLists.txt
Examples/TestPlugin/Ext/SDL2/linux/include/SDL2/: SDL_config.h  SDL_revision.h
Examples/TestPlugin/Ext/SDL2/linux/lib/: libSDL2-2.0.so.0.18.2
Examples/TestPlugin/Ext/SDL2/linux/lib/cmake/SDL2/: SDL2Targets-release.cmake  SDL2staticTargets.cmake
Examples/TestPlugin/Ext/SDL2/linux/lib/pkgconfig/: sdl2.pc
Examples/TestPlugin/Ext/SDL2/msvc/cmake/: SDL2Targets.cmake  SDL2mainTargets.cmake  SDL2staticTargets.cmake
Examples/TestPlugin/Ext/SDL2/msvc/include/SDL2/: SDL_config.h  SDL_revision.h
Examples/TestPlugin/Ext/glad/: CMakeLists.txt
Examples/TestPluginWidget/: CMakeLists.txt  TestPluginWidget.cpp  TestPluginWidget.h
Examples/TestPluginWidget/Ext/: CMakeLists.txt
SBPluginSDK/: CMakeLists.txt  SBNode.h
