project(sdl2)
add_library(${PROJECT_NAME} SHARED IMPORTED GLOBAL)
if(WIN32)
    set_property(TARGET ${PROJECT_NAME} PROPERTY IMPORTED_IMPLIB ${CMAKE_CURRENT_SOURCE_DIR}/msvc/lib/SDL2.lib)
    set_property(TARGET ${PROJECT_NAME} PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/msvc/bin/SDL2.dll)
    target_include_directories(${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/msvc/include)
elseif(NOT APPLE)
    set_property(TARGET ${PROJECT_NAME} PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/linux/lib/libSDL2-2.0.so.0.18.2)
    target_include_directories(${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/linux/include)
endif()
